remove .bash_history, start epiphany in xs-portal

--- a/root/usr/share/applications/epiphany.desktop
+++ b/root/usr/share/applications/epiphany.desktop
@@ -333,7 +333,7 @@ Comment[yo]=Wáròyìn wẹ́ẹ̀bù náà
 Comment[zh_CN]=浏览网络
 Comment[zh_HK]=瀏覽網頁
 Comment[zh_TW]=瀏覽網頁
-Exec=xs-epiphany
+Exec=epiphany file:///library/index.html %U
 StartupNotify=true
 Terminal=false
 Type=Application
